fix: y-overflow
adds border-box as default box-sizing

--- a/src/app.css
+++ b/src/app.css
@@ -69,6 +69,12 @@
 
 @media (max-width: 975px) {
   .query-results {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 650px) {
+  .query-results {
     grid-template-columns: 1fr;
   }
 }
@@ -83,7 +89,7 @@
   margin: unset;
   margin: 10px 8px;
   padding: 20px 15px;
-  min-height: 350px;
+  min-height: 340px;
   height: max-content;
   width: unset;
 }
